(fix): bottom padding on mobile login form

--- a/src/app/modules/auth/login.component.scss
+++ b/src/app/modules/auth/login.component.scss
@@ -88,6 +88,7 @@ m-login {
       clip-path: polygon(0 2%, 100% 0, 100% 97%, 0 95%);
 
       @media screen and (max-width: $m-grid-max-mobile) {
+        clip-path: polygon(0 2%, 100% 0, 100% 100%, 0 99%);
         padding: 55px 26px 47px;
 
         h3,
